tests/files/flow_controller_tests/should_run/110.cmdr
x = 80.9;
print arccsch(x);