tests/files/flow_controller_tests/should_fail/106.cmdr
x = true;
print arccsch(x);